--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -10,6 +10,9 @@
 
     </head>
     <body>
+    
+    <div data-role="content" data-theme="b">
+    
         <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
@@ -17,7 +20,7 @@
                     {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                 </a>
             {% else %}
-                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+<!--                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a> -->
             {% endif %}
         </div>
 
@@ -33,5 +36,7 @@
             {% block fos_user_content %}
             {% endblock fos_user_content %}
         </div>
+        
+    </div>
     </body>
 </html>
