--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -5,12 +5,15 @@ body {
 //	max-width: 800px;
 	width: 100%;
 //	background: url('img/wild_oliva.png') !important;
+	background-color: black;
+	background: black;
 	overflow-y: visible;
 }
 	
 .ui-page.ui-body-c  {
 //	background: url('img/wild_oliva.png') !important;
-
+	background: black;
+	background-color: black;
 } 
 
 #s_page {
@@ -19,18 +22,17 @@ body {
 
 #f_page {
 	overflow: auto;
+	width: 100%;
 }
 	
-	
-
 #header {
 	width: 100%;
 	height: 44px;
-//	position: fixed;
-//	top: 22px;
+	position: fixed;
+
 	top: 0px;
-	margin-top: 0px;
-	padding-top: 0px;
+//	margin-top: 0px;
+//	padding-top: 0px;
 }
 
 #headerText {
@@ -39,7 +41,7 @@ body {
 	color: white;
 	text-align: center;
 	border:0;
-	text-shadow: 0px -1px 0px #ccc, 0px 1px 0px #000;
+	text-shadow: 0px -1px 1px #ccc, 0px 1px 1px #000;
 	margin-top: 10px;
 }
 	
@@ -52,35 +54,30 @@ body {
 #roundScore {
 	border: 0px;
 	font-size: 0.8em;
-	font-family: verdana;
-
+	font-family: arial, verdana;
+	font-weight: bold;
 	text-align: left;
 	margin-top: 1.5em;
 	padding-left: 2px;
 	line-height: 1.1em; 
-	color: #000;
-	text-shadow: -1px -1px 2px #e0e0e0;
-	
-	
-	
+	color: #333;
+	text-shadow: 0px 1px 1px #fcfcfc;
 	
 	}
 	
 #holeScore {
 	border: 0px;
 	font-size: 0.8em;
-	font-family: verdana;
+	font-family: arial, verdana;
+	font-weight: bold;
 	text-align: right;
 	margin-top: 1.5em;
 	padding-right: 2px;
 	line-height: 1.1em; 
-	color: #000;
-	text-shadow: -1px -1px 2px #e0e0e0;
-	
+	color: #333;
+	text-shadow: 0px 1px 1px #fcfcfc;
 	
 	}
-
-
 
 #scoreWrappi
 	{
@@ -89,13 +86,13 @@ body {
 	border: 0px;
 	padding: 0px;
 	background-color: transparent;
-	padding-top: 20px;
-	height: 85px;
+	padding-top: 5px;
+	height: 75px;
 	}
 	
-#scoreWrappi .ui-block-a { width: 25%}
-#scoreWrappi .ui-block-b { width: 50%}
-#scoreWrappi .ui-block-c { width: 25%}
+#scoreWrappi .ui-block-a { width: 30%}
+#scoreWrappi .ui-block-b { width: 40%}
+#scoreWrappi .ui-block-c { width: 30%}
 	
 #score {
 	margin: auto;
@@ -141,10 +138,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	text-align: center;
 	font-family: verdana, arial;
 	float: left;
-	margin-top: 10px;
+	margin-top: 2px;
 	font-weight: bold;
-	color: #333;
-	text-shadow: -1px -1px 2px #fff, 1px 1px 2px #fff;
+//	color: #eee;
+	color: #000;
+	text-shadow: -1px -1px 1px rgba(175,175,175,0.85), 1px -1px 1px rgba(165,165,165,0.85), -1px 1px 1px rgba(255,255,255,0.85), 1px 1px 1px rgba(255,255,255,0.85);
+//	position: relative;
+
+
 }
 
 #footer {
@@ -153,8 +154,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	position: fixed;
 	padding: 1px;
 	padding-bottom: 0px !important;
-	bottom: -1px;
-	bottom: 0px;
+	bottom: -1px !important;
 	margin: 0px;
 	}
 	
@@ -162,7 +162,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	background-color: rgba(0,0,0,0.0);
 	box-shadow: none;
 }
-	
 	
 #f_footer {
 	width: 100%;
@@ -174,7 +173,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	}
 	
 #f_footer .ui-btn { padding: 0px; margin: 0px; border:0px; height: 38px;}
-	
 		
 #footer .ui-btn { margin: 0px; padding: 0px; top: 0px; width: 40px; height: 38px; border-radius: 0px;  border-color : transparent; box-shadow: none; background:transparent}
 #footer .ui-btn-inner { border: 0px; padding:0px; margin-top: 6px; margin-left: 8px;}
@@ -182,7 +180,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 #sliderWrappi {
 	top: 10px;
 	margin: 0px;
-	height: 92px;
+	height: 60px;
+
 	}
 
 #sliderWrappi .ui-block-a { width: 5%}
@@ -211,7 +210,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e1e1e', end
 	padding: 0px;
 }
 
-
 #slideri {
 	margin: auto;
 	height: 36px;
@@ -222,7 +220,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e1e1e', end
 
 #slideri .ui-slider .ui-slider-handle {
 	width:100px !important; 
-	height:91px !important; 
+	height:60px !important; 
 //	background: blue;
 	outline: none;
 	border-radius: 0px !important;
@@ -261,26 +259,36 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	width: 0px !important;
 }
 
+#top {
+	border-bottom: 1px;
+	border-bottom-color: #ADADAD;
+	border-bottom-style: solid;
+}
+
+
 #holeData {
 	clear: both;
 	text-align: left;
 	width: 90%;
 	margin: auto;
 	line-height: 1.1em;
-	background: #7e7e7e;
-	padding: 10px;
+//	background: #7e7e7e;
+//	padding: 10px;
 	border-style: solid;
 	border-radius: 4px;
-	border-top-color: #e3e3e3;
-	border-bottom-color: black;
+	border-top-color: #ADADAD;
+	border-bottom-color: #707070;
 	border-top-width: 1px;
 	border-bottom-width: 1px;
-	border-right-width: 0px;
-	border-left-width: 0px;
+	border-right-color: #ADADAD;
+	border-left-color: #ADADAD;
+	border-right-width: 1px;
+	border-left-width: 1px;
 	font-size: 0.8em;
 	color: #fff;
 	text-shadow: 0px 1px 1px #000;
 	overflow: auto;
+	margin-top: 15px;
 }
 
 #scoreCard {
@@ -303,6 +311,9 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	text-align: center;
 	border-spacing: 0px;
 	width: 100%;
+		border-color: #5c5c5c;
+			border-collapse: collapse;
+				border-width: 1px;
 }
 
 #scoreCardScores {
@@ -311,14 +322,18 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	text-align: center;
 	border-spacing: 0px;
 	width: 100%;
+		border-color: #5c5c5c;
+					border-collapse: collapse;
+						border-width: 1px;
 }
-
 
 #scHeaders {
 	border-width: 1px;
-	border-color: black; 
+//	border-color: black; 
 	border-style: solid;
-	
+		border-color: #5c5c5c;
+	border-collapse: collapse;
+	font-weight: bold;
 }
 
 #dialogCenter {
@@ -331,35 +346,28 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 #scCells {
 
 	padding: 0px;
-	border-bottom-width: 1px;
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-left-width: 1px;
-	border-style: dotted;
-	border-color: black;
+	border-style: solid;
+//	border-color: black;
+		border-color: #5c5c5c;
+			border-width: 1px;
 
 }
 
 #scScoreCells {
 	padding: 0px;
-	border-bottom-width: 1px;
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-left-width: 1px;
-	border-style: dotted;
-	border-color: black;
+	border-style: solid;
 	background: #efefef;
+	border-color: #5c5c5c;
+		border-width: 1px;
+	border-left-width: 0px;;
 
 }
 #scPointsCells {
 	padding: 0px;
-	border-bottom-width: 1px;
-	border-top-width: 0px;
-	border-left-width: 1px;
-	border-right-width: 1px;
-	border-style: dotted;
-	border-color: black;
+	border-style: solid;
 	background: #e3e3e3;
+	border-color: #5c5c5c;
+	border-width: 1px;
 }
 
 #scLeftSide {
@@ -380,57 +388,47 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	position: absolute;
 	bottom: 62px;
 
-	border-left-width: 1px;
-	border-left-style: solid;
-	border-left-color: black;
 	text-align: center;
+	border-color: #5c5c5c;
+	border-bottom-width: 1px;
+	font-weight: bold;
+
 }
 
 #scTotalScore {
 
 	padding: 0px;
-	border-bottom-width: 1px;
-	border-top-width: 1px;
-	border-right-width: 0px;
-	border-left-width: 0px;
 	border-style: solid;
-	border-color: black;
+//	border-color: black;
 	background: #efefef;
 	width: 33%;
+		border-color: #5c5c5c;
+			border-width: 0px;
+	border-bottom-width: 1px;
+	font-weight: bold;
 }
 
 #scTotalPoints {
 
 	padding: 0px;
-	border-bottom-width: 1px;
-	border-top-width: 1px;
-	border-right-width: 1px;
-	border-left-width: 0px;
 	border-style: solid;
-	border-color: black;
+//	border-color: black;
 	background: #efefef;
 	width: 33%;
+		border-color: #5c5c5c;
+			border-width: 0px;
+	border-bottom-width: 1px;
+	border-right-width: 1px;
+	font-weight: bold;
 }
 
 #scTotals {
 	border-style: solid;
-	border-color: black;
-	border-bottom-width: 1px;
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-left-width: 0px;
+//	border-color: black;
 	padding: 0px;
-}
-
-
-#scTotalsL {
-	border-style: solid;
-	border-color: black;
-	border-bottom-width: 1px;
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-left-width: 1px;
-	padding: 0px;
+	border-color: #5c5c5c;
+		border-width: 1px;
+		font-weight: bold;
 }
 
 
@@ -494,7 +492,6 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	margin: auto;
 }
 
-
 #prefsWrappi
 	{
 	width: 100%;
@@ -502,26 +499,14 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	margin: auto;
 	text-align: center;
 }
-	
-#gender .ui-slider-switch { width: 6em };
 
 #f_roundList {
-	position: absolute;
-	overflow: auto;
-}
-	
-#scrollWrapper {
-	position:absolute; z-index:1;
-	top:44px; bottom:40px; left:0;
-	width:100%;
-//	background: transparent;
-	overflow:auto;
-	border: 0;
-	margin: 0;
+//	position: absolute;
+//	overflow: auto;
 	width: 100%;
 }
-
-#scrollWrapperi {
+	
+#courseListWrap {
 //	position:absolute; z-index:1;
 	top:44px; bottom:40px; left:0;
 	width:100%;
@@ -533,7 +518,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	padding-top: 15px;
 }
 
-#scrollWrapperi form {
+#courseListWrap form {
 //    position : fixed;
 	padding-bottom: 0px !important;
 	margin-bottom: 0px !important;
@@ -551,15 +536,6 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 
 #courseList {
 	width: 100%;
-}
-
-#courseSelectCancelButton {
-
-	margin: 5px;
-}
-
-#cancelButton {
-//	width: 100%;
 }
 
 c_footer {
