--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -4,10 +4,16 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
+    	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery.mobile-1.3.0.min.css') }}" />
+<!--	<script src="{{ asset('bundles/apexscore/js/jquery-1.8.2.min.js') }}"></script> -->
+
+	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+
+	<script src="{{ asset('bundles/apexscore/js/jquery.mobile-1.3.0.min.js') }}"></script>
+
+<!--	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.js"></script> -->
+
+    <script src="{{ asset('bundles/apexscore/js/knockout-2.2.1.js') }}"></script>
 
 
 
@@ -27,6 +33,7 @@
 	<script type="text/javascript">
 		$.mobile.changePage.defaults.allowSamePageTransition = true;
         $.mobile.ignoreContentEnabled = true;
+         $.mobile.defaultHomeScroll = 0;
 	</script>
 
 	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/styles.css') }}" type="text/css" media="screen" rel="stylesheet" />
@@ -57,9 +64,9 @@
 
 			<a href="#" data-role="button" data-icon="gear" data-iconpos="notext" id="prefsButton" data-bind="click: loadPrefs"></a>
 
-		<div id="headerText">Rounds for {{ app.user.username }}</div>
-				<a href="#courseSelect" data-rel="dialog" data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
-	</div>
+		<div id="headerText">Rounds for <span data-bind="text: playerName"></span></div>
+				<a href="#courseSelect"  data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
+	</div> <!-- data-rel="dialog" -->
 		
 
 <script type="text/javascript">
@@ -79,17 +86,14 @@ moment.lang('en', {
 
 </script>
 		
-	<div id="f_roundList" class="wrap" data-role="content" data-iscroll>
-<!--			<div id="scrollWrapper"> -->
-			<ul id ="roundList" data-role="listview" data-theme="d" data-bind="mobileList: roundList, foreach: roundList"> 
-
-				<li><a href="#" data-bind="click: $root.loadRound.bind($data, id)"><span data-bind="text: course_name">&nbsp;</span><span style="font-size: 75%"> /  
-						<span  data-bind="text: moment(start_time.date).calendar()"></span></a>
-				</li>
-			</ul> 
-<!--			</div> -->
-		</div>
+	<div id="f_roundList">
+		<ul id="roundList" data-role="listview" data-theme="d" data-bind="mobileList: roundList, foreach: roundList"> 
+			<li><a href="#" data-bind="click: $root.loadRound.bind($data, id)"><span data-bind="text: course_name"></span><span style="font-size: 66%">   
+				<div><span style="color: #999" data-bind="text: moment(start_time.date).calendar()"></div></a>
+			</li>
+		</ul>  
 	</div>
+</div>
 	
 	
 
@@ -102,9 +106,11 @@ moment.lang('en', {
 			<span style="font-size: 75%">/ Hcp  <span data-bind="text: currentHoleHcp" ></span></span>
 		</div>
 
-		<a href="#scoreCard"  data-role="button" data-rel="dialog" data-icon="grid" data-iconpos="notext" data-close-btn="none" ></a>
+		<a href="#scoreCard"  data-role="button" data-rel="dialog" data-icon="grid" data-iconpos="notext" data-close-btn="none" data-transition="slidedown" ></a>
 		
 	</div>
+
+<div id="top" data-role="content" data-theme="b">
 
 	<div id="scoreWrappi" class="ui-grid-b">
 		<div id="holeScore" class="ui-block-a">
@@ -119,13 +125,9 @@ moment.lang('en', {
 				<div id="il"></div>
 			
 				<div id="score">
-	
 					<div id="scoreDisplay" data-bind="visible:  noScoreEntered">-</div>
-	
-					<div id="scoreDisplay" data-bind="text: currentHoleScore, visible: noScoreEntered() == false""></div>
-						
+					<div id="scoreDisplay" data-bind="visible: noScoreEntered() == false, text: currentHoleScore"></div>
 				</div>
-				
 				<div id="ir"></div>
 				
 			</div>
@@ -151,10 +153,13 @@ moment.lang('en', {
 		<div id="rightFill" class="ui-block-c"></div>
 	</div>
 
+</div>
+
 <!-- <div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> -->
 
-	<div id="holeData">
-		<div  class="ui-grid-a">
+
+	<div id="holeData" >
+		<div  class="ui-grid-a" data-role="content" data-theme="c">
 			<div id="1" class="ui-block-a">
 				<span id="course" data-bind="text: courseName"></span><br>
 				Hole <span id="hole" data-bind="text: currentHole"></span><br>
@@ -175,7 +180,7 @@ moment.lang('en', {
 		<span style="float: left""><a href="#s_page" data-role="button" data-icon="arrow-l"  data-transition="slidefade" data-direction="reverse" data-bind="click: previousHole" data-iconpos="notext"></a></span>
 
 
-		<span style="float: right"><a href="#s_page" data-role="button" data-icon="arrow-r" data-bind="click: nextHole" data-transition="slidefade" data-iconpos="notext"></a>
+		<span style="float: right"><a data-role="button" data-icon="arrow-r" data-bind="click: nextHole"  data-iconpos="notext"></a>
 		</span>	
 		
 	</div>
@@ -209,15 +214,15 @@ moment.lang('en', {
 					<td id="scCells" data-bind="text: hole_number"></td>
 					<td id="scCells" data-bind="text: hole_par"></td>
 					<td id="scCells" data-bind="text: hole_hcp"></td>
-					<td id="scCells" data-bind="text: hole_length"></td>
+					<td id="scCells"><span data-bind="text: hole_length"></span> m</td>
 				</tr>
 			</tbody>
 			<tbody>
 				<tr>
-					<td id="scTotalsL"></td>
+					<td id="scTotals"></td>
 					<td id="scTotals" data-bind="text: coursePar"></td>
 					<td id="scTotals"></td>
-					<td id="scTotals"></td>
+					<td id="scTotals"><span data-bind="text: courseLength"></span> m</td>
 				</tr>
 			</tbody>
 		</table>
@@ -247,7 +252,7 @@ moment.lang('en', {
 						<td id="scScoreCells" style="background: #C2F0C2"><span data-bind="text: scoreToPar"></span></td>
 						<!-- /ko -->
 						<!-- ko if: scoreToPar() == 0 -->
-						<td id="scScoreCells"><span data-bind="text: scoreToPar"></span></td>
+						<td id="scScoreCells"><span>E</span></td>
 						<!-- /ko -->
 						
 						<td id="scPointsCells" data-bind="text: points"></td>
@@ -277,7 +282,7 @@ moment.lang('en', {
 						<td id="scTotalScore" style="background-color: #C2F0C2"><span data-bind="text: totalToPar" ></span></td>
 					<!-- /ko -->
 					<!-- ko if: totalToPar() == 0 -->
-						<td id="scTotalScore"><span data-bind="text: totalToPar" ></span></td>
+						<td id="scTotalScore"><span>E</span></td>
 					<!-- /ko -->
 					
 					<td id="scTotalPoints" data-bind="text: totalPoints"></td> 
@@ -350,28 +355,23 @@ moment.lang('en', {
 	</div>
 </div>
 
-<!--	<script type="text/javascript">
-		$('#prefs').live('pagecreate', function(event) {
-			var sel = $("select#gender");
-			sel.selectmenu("refresh");
-		});
-	</script> -->
 
 <div id="courseSelect" data-role="page" data-title="New round" data-theme="b">
-	<div id="scrollWrapperi" data-iscroll">
-	<ul data-role="listview" data-filter="true" data-filter-placeholder="Choose course..." id="courseList" data-bind="mobileList: courseList, foreach: courseList">
-		<li><a href="#" data-bind="click: $root.startNewRound.bind($data, id, name)"><span data-bind="text: name"></span></a></li>
-	</ul>
-	<div id="c_footer">
-		<div id="courseSelectCancelButton">
-			<a href="#f_page" data-role="button" id="cancelButton" data-icon="delete" data-theme="a">Cancel</a>
-		</div>
+	<div id="header" data-role="header" data-theme="b" data-position="fixed">
+		<a href="#f_page" data-role="button" id="Home" data-icon="home" data-iconpos="notext"></a>
+		<div id="headerText">Choose course</div>
 	</div>
+	<div id="courseListWrap">
+		<ul data-theme="d" data-role="listview" data-filter="true" data-filter-placeholder="Course name or abbreviation..." data-filter-theme="a" id="courseList" data-bind="mobileList: courseList, foreach: courseList">
+			<li data-bind="attr: { 'data-filtertext': alias +' '+ name}">
+				<a href="#" data-bind="click: $root.startNewRound.bind($data, id, name), text: name"></a>
+			</li>
+		</ul>
 	</div>
 </div>		
 
 {% else %}
-<div>
+<div data-theme="b" data-role="page">
 
               <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
               
